@@ -27,6 +27,7 @@
 #include "dateformat_class.h"
 #include "dateformat_format.h"
 #include "dateformat_data.h"
+#include "ext/date/php_date.h"
 
 /* {{{ 
  * Internal function which calls the udat_format
@@ -158,9 +159,30 @@ PHP_FUNCTION(datefmt_format)
 			timestamp = internal_get_timestamp(dfo, hash_arr TSRMLS_CC);
 			INTL_METHOD_CHECK_STATUS( dfo, "datefmt_format: Date formatting failed" )
 			break;
+		case IS_OBJECT: {
+			zend_class_entry *date_ce = php_date_get_date_ce();
+			zval retval;
+			zval *zfuncname;
+			if(!instanceof_function(Z_OBJCE_P(zarg), date_ce TSRMLS_CC)) {
+				intl_errors_set(INTL_DATA_ERROR_P(dfo), U_ILLEGAL_ARGUMENT_ERROR, "datefmt_format: object must be an instance of DateTime", 0 TSRMLS_CC );
+				RETURN_FALSE;
+			}
+			INIT_ZVAL(retval);
+			MAKE_STD_ZVAL(zfuncname);
+			ZVAL_STRING(zfuncname, "getTimestamp", 1);
+			if(call_user_function(NULL, &zarg, zfuncname, &retval, 0, NULL) != SUCCESS || Z_TYPE(retval) != IS_LONG) {
+				intl_errors_set(INTL_DATA_ERROR_P(dfo), U_ILLEGAL_ARGUMENT_ERROR, "datefmt_format: cannot get timestamp", 0 TSRMLS_CC );
+				zval_ptr_dtor(&zfuncname);
+				RETURN_FALSE;
+			}
+			zval_ptr_dtor(&zfuncname);
+			p_timestamp = Z_LVAL(retval);
+			timestamp = p_timestamp*1000;
+		}
+			break;
 		default:
-			intl_error_set( NULL, U_ILLEGAL_ARGUMENT_ERROR,
-				"datefmt_format: takes either an array  or an integer timestamp value ", 0 TSRMLS_CC );
+			intl_errors_set( INTL_DATA_ERROR_P(dfo), U_ILLEGAL_ARGUMENT_ERROR,
+				"datefmt_format: takes either an array or an integer timestamp value or a DateTime object", 0 TSRMLS_CC );
 			RETURN_FALSE;
 	}
 
