@@ -33,8 +33,8 @@ function ut_main()
 		0,
 		-1200000,
 		1200000,
-		2200000000,
-		-2200000000,
+		2200000000.0,
+		-2200000000.0,
 		90099999,
 		3600,
 		-3600
@@ -69,6 +69,15 @@ function ut_main()
 		$localtime_arr1,
 		$localtime_arr2,
 		$localtime_arr3
+	);
+	
+	$d1 = new DateTime("2010-01-01 01:02:03", new DateTimeZone("UTC"));
+	$d2 = new DateTime("2000-12-31 03:04:05", new DateTimeZone("UTC"));
+	$d2->setTimezone(new DateTimeZone("PDT"));
+	$dates = array(
+		$d1, 
+		$d2,
+		new StdClass(),
 	);
 
 	//Test format with input as a timestamp : integer
@@ -109,6 +118,24 @@ function ut_main()
 		}
 	}
 	}
+	}
+
+	foreach($dates as $date_entry) {
+		foreach( $locale_arr as $locale_entry ){
+			foreach( $datetype_arr as $datetype_entry ) {
+				$res_str .= "\n------------";
+				$res_str .= "\nDate is: ".var_export($date_entry, true);
+				$res_str .= "\n------------";
+				
+				$fmt = ut_datefmt_create( $locale_entry , $datetype_entry ,$datetype_entry, $timezone, IntlDateFormatter::GREGORIAN );
+				$formatted1 = ut_datefmt_format( $fmt , $date_entry);
+				if( intl_get_error_code() == U_ZERO_ERROR){
+					$res_str .= "\nFormatted DateTime is : $formatted1";
+				}else{
+					$res_str .= "\nError while formatting as: '".intl_get_error_message()."'";
+				}
+			}
+		}
 	}
 
 	return $res_str;
@@ -286,3 +313,108 @@ IntlDateFormatter locale= en_US ,datetype = 3 ,timetype =3
 Formatted localtime_array is : 12/17/95 12:13 AM
 IntlDateFormatter locale= en_US ,datetype = -1 ,timetype =-1 
 Formatted localtime_array is : 18951217 12:13 AM
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2010-01-01 01:02:03',
+   'timezone_type' => 3,
+   'timezone' => 'UTC',
+))
+------------
+Formatted DateTime is : Thursday, December 31, 2009 3:02:03 PM GMT-10:00
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2010-01-01 01:02:03',
+   'timezone_type' => 3,
+   'timezone' => 'UTC',
+))
+------------
+Formatted DateTime is : December 31, 2009 3:02:03 PM GMT-10:00
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2010-01-01 01:02:03',
+   'timezone_type' => 3,
+   'timezone' => 'UTC',
+))
+------------
+Formatted DateTime is : Dec 31, 2009 3:02:03 PM
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2010-01-01 01:02:03',
+   'timezone_type' => 3,
+   'timezone' => 'UTC',
+))
+------------
+Formatted DateTime is : 12/31/09 3:02 PM
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2010-01-01 01:02:03',
+   'timezone_type' => 3,
+   'timezone' => 'UTC',
+))
+------------
+Formatted DateTime is : 20091231 03:02 PM
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2000-12-30 19:04:05',
+   'timezone_type' => 3,
+   'timezone' => 'America/Los_Angeles',
+))
+------------
+Formatted DateTime is : Saturday, December 30, 2000 5:04:05 PM GMT-10:00
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2000-12-30 19:04:05',
+   'timezone_type' => 3,
+   'timezone' => 'America/Los_Angeles',
+))
+------------
+Formatted DateTime is : December 30, 2000 5:04:05 PM GMT-10:00
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2000-12-30 19:04:05',
+   'timezone_type' => 3,
+   'timezone' => 'America/Los_Angeles',
+))
+------------
+Formatted DateTime is : Dec 30, 2000 5:04:05 PM
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2000-12-30 19:04:05',
+   'timezone_type' => 3,
+   'timezone' => 'America/Los_Angeles',
+))
+------------
+Formatted DateTime is : 12/30/00 5:04 PM
+------------
+Date is: DateTime::__set_state(array(
+   'date' => '2000-12-30 19:04:05',
+   'timezone_type' => 3,
+   'timezone' => 'America/Los_Angeles',
+))
+------------
+Formatted DateTime is : 20001230 05:04 PM
+------------
+Date is: stdClass::__set_state(array(
+))
+------------
+Error while formatting as: 'datefmt_format: object must be an instance of DateTime: U_ILLEGAL_ARGUMENT_ERROR'
+------------
+Date is: stdClass::__set_state(array(
+))
+------------
+Error while formatting as: 'datefmt_format: object must be an instance of DateTime: U_ILLEGAL_ARGUMENT_ERROR'
+------------
+Date is: stdClass::__set_state(array(
+))
+------------
+Error while formatting as: 'datefmt_format: object must be an instance of DateTime: U_ILLEGAL_ARGUMENT_ERROR'
+------------
+Date is: stdClass::__set_state(array(
+))
+------------
+Error while formatting as: 'datefmt_format: object must be an instance of DateTime: U_ILLEGAL_ARGUMENT_ERROR'
+------------
+Date is: stdClass::__set_state(array(
+))
+------------
+Error while formatting as: 'datefmt_format: object must be an instance of DateTime: U_ILLEGAL_ARGUMENT_ERROR'
